--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,8 @@
         app:layout_constraintStart_toStartOf="@+id/input"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.225"
-        app:srcCompat="@drawable/bulb_png" />
+        app:srcCompat="@drawable/bulb_png"
+        android:onClick="showInfo"/>
 
     <Button
         android:id="@+id/submitButton"
