--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -7,7 +7,7 @@
     android:layout_margin="5dp"
     android:background="#FBC02D">
 
-    <TextView
+    <EditText
         android:id="@+id/text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -18,6 +18,7 @@
         android:textSize="16sp"
         tool:text = "Siddharth"
         android:textColor="#121212"
+        android:background="@null"
         />
 
     <ImageView
